@@ -4912,9 +4912,10 @@ sub parseMsg {
 		undef @venderItemList;
 		undef $venderID;
 		$venderID = substr($msg,4,4);
-
-		message("----------Vender Store List-----------\n", "list");
-		message("#  Name                                         Type           Amount Price\n", "list");
+		my $player = Actor::get($venderID);
+		
+		message(center(' Vender: ' . $player->nameIdx . ' ', 79, '-')."\n", "list");
+		message("#  Name                                       Type           Amount       Price\n", "list");
 		for (my $i = 8; $i < $msg_size; $i+=22) {
 			my $number = unpack("v1", substr($msg, $i + 6, 2));
 
@@ -4940,11 +4941,11 @@ sub parseMsg {
 			});
 
 			message(swrite(
-				"@< @<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< @<<<<<<<<<<<<< @>>>>> @>>>>>>>z",
-				[$number, $item->{name}, $itemTypes_lut{$item->{type}}, $item->{amount}, $item->{price}]),
+				"@< @<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< @<<<<<<<<<<<<< @>>>>> @>>>>>>>>>z",
+				[$number, $item->{name}, $itemTypes_lut{$item->{type}}, $item->{amount}, formatNumber($item->{price})]),
 				"list");
 		}
-		message("--------------------------------------\n", "list");
+		message("-------------------------------------------------------------------------------\n", "list");
 
 		Plugins::callHook('packet_vender_store2', {
 			venderID => $venderID,
@@ -4962,7 +4963,7 @@ sub parseMsg {
 		# FIXME: Read the packet the server sends us to determine
 		# the shop title instead of using $shop{title}.
 		message(center(" $shop{title} ", 79, '-')."\n", "list");
-		message("#  Name                                         Type        Amount     Price\n", "list");
+		message("#  Name                                          Type        Amount       Price\n", "list");
 		for (my $i = 8; $i < $msg_size; $i += 22) {
 			my $number = unpack("v1", substr($msg, $i + 4, 2));
 			my $item = $articles[$number] = {};
@@ -4980,8 +4981,8 @@ sub parseMsg {
 			debug("Item added to Vender Store: $item->{name} - $item->{price} z\n", "vending", 2);
 
 			message(swrite(
-				"@< @<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< @<<<<<<<<<< @>>>>> @>>>>>>>z",
-				[$articles, $item->{name}, $itemTypes_lut{$item->{type}}, $item->{quantity}, $item->{price}]),
+				"@< @<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< @<<<<<<<<<< @>>>>> @>>>>>>>>>z",
+				[$articles, $item->{name}, $itemTypes_lut{$item->{type}}, $item->{quantity}, formatNumber($item->{price})]),
 				"list");
 		}
 		message(('-'x79)."\n", "list");
